<resources>
    <string name="app_name">e-weigh</string>

    <string name="no_connection">No Connection</string>
    <string name="no_info_found">No Info Found</string>
    <string name="live_weight">Live Weight</string>
    <string name="enter_live_weight_cm">Enter live weight (cm)</string>
    <string name="live_weight_label">LiveWeight:</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="get_live_weight">Get Live Weight</string>
    <string name="about">About</string>

    <string name="location_permission">The app requires access to your current location
        to submit data. Please allow this permission to continue</string>
    <string name="zero">0</string>
    <string name="submit">Submit</string>
    <string name="heart_girth_cm">Heart Girth (cm)</string>

    <!-- Register -->
    <string name="register">Register</string>
    <string name="country">Country</string>
    <string name="county">County</string>
    <string name="id_number">ID Number</string>
    <string name="full_name">Full Name</string>
    <string name="log_in">Log In</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email_mobile_no">Email/Mobile No.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_one">Create one</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="view_submissions">View Submissions</string>
    <string name="view_cattle">View Cattle</string>
    <string name="no_submissions_yet">No submissions added yet</string>
    <string name="no_cattle_added_yet">No cattle added yet</string>
</resources>
