<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360sp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20dp">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/app_logo_full"
        android:contentDescription="@string/app_name"/>

    <Button
        android:id="@+id/btn_get_lw"
        style="@style/HomeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_live_weight"/>

    <Button
        android:id="@+id/btn_get_feed_ration"
        style="@style/HomeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_feed_ration"/>

    <Button
        android:id="@+id/btn_view_submissions"
        style="@style/HomeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_submissions"/>

    <Button
        android:id="@+id/btn_view_cattle"
        style="@style/HomeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_cattle"/>

    <Button
        android:id="@+id/btn_about"
        style="@style/HomeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"/>

</LinearLayout>