<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        style="@style/FormLabelStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heart_girth_cm"/>

    <EditText
        android:id="@+id/input_hg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:inputType="number"
        android:hint="@string/zero"
        android:textSize="48sp"
        android:padding="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btn_submit_hg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGray"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"/>
    
    <TextView
        style="@style/FormLabelStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/live_weight"/>

    <TextView
        android:id="@+id/txt_lw"
        style="@style/FormNumberStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zero"/>

    <TextView
        android:id="@+id/txt_metadata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/darkGray"
        android:text="Metadata"/>

</LinearLayout>